Revision history for Perl extension File::Copy::Recursive.

0.40
    - Issue #5 - Deep directories pathmk
    - rt 123966 - switch to bsd_glob() since glob() will disappear in perl 5.30

0.39 Fri Dec 29 13:26:12 2017
    - tidy code
    - Change into directory before emptying it
    - Stop emptying/removing a path if it is changed out from underneath us
    - pathrm() fixes
    - Actual unit tests!

0.38  Sun Dec  7 22:35:42 2008
    - do rmove() symlink fixups like rcopy() from ver 0.37
    - rt 29750 (added $DirPerms)
    - Added requested rcopy_glob() && rmove_glob() for convenience

0.37  Thu Oct  9 11:52:54 2008
    - rt 38959 POD fix ups
    - improved rcopy() symlink logic and do &goto; to preserve the stack
    - added "tests" to the TODO list, patches welcome!

0.36  Wed Apr 16 15:32:36 2008
    - made all bareword file handles be lexical variables if the perl is new enough to support it (5.6.0 and up, see 'Indirect Filehandles' in perlopentut)

0.35  Mon Aug 27 16:18:53 2007
	- fixed rt 29008

0.34  Tue Aug 21 09:41:05 2007
	- samecheck return; instead of croak;
	- remaining croak()'s to $! = .. return;

0.33  Thu May 10 12:19:36 2007
	- Sorry missed this one w/ 0.32... rt 25529

0.32  Wed May  9 20:56:55 2007
	- rt 26459

0.31  Wed Jan 24 16:42:15 2007
	- Fixed "Uninitialized value in -e ... line 196" problem. (Thanks Ben Thomas)
	- Fixed similar issue in nearby code (use of $_[0] instead of $org)
	- removed pointless at best, vague problem at best !-e readlink() check from symlink patch from 21267 introduced in 0.26

0.30  Fri Dec  8 14:26:49 2006
    - Added $BdTrgWrn to quiet warnings by default (rt 23861)
    - added backwards compat for pre 5.6 perls (rt 21800)
    - Added $SkipFlop (rt request 21503)

0.29  Tue Oct 31 12:21:20 2006
    - Made fcopy() do samecheck if $RMTrgFil is used and is triggered to avoid it removing the file before it can be copied to itself.

0.28  Thu Sep  7 15:27:06 2006